--- a/DotNet.Startup.csproj
+++ b/DotNet.Startup.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
@@ -8,22 +8,23 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard1.5</TargetFrameworks>
+    <TargetFrameworks>net452</TargetFrameworks>
     <Description>Enables you to define your application initialization workflow just like in ASP.NET Core</Description>
     <Authors>Ivan Prodanov</Authors>
     <Company>Ivan Prodanov</Company>
     <Product />
-    <Copyright>Ivan Prodanov</Copyright>
+    <Company>Ivan Prodanov</Company>
     <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=288859</PackageIconUrl>
-    <PackageLicenseUrl>http://unlicense.org/UNLICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/ivan-prodanov/DotNet.Startup/</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/ivan-prodanov/DotNet.Startup/</RepositoryUrl>
-    <RepositoryType>GitHub</RepositoryType>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageProjectUrl></PackageProjectUrl>
+    <RepositoryUrl></RepositoryUrl>
+    <RepositoryType></RepositoryType>
     <PackageTags>DotNet</PackageTags>
     <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Version>2.0.0</Version>
   </PropertyGroup>
-
-  <Import Project="..\..\Reflection\DevOps.Reflection\DevOps.Reflection.projitems" Label="Shared" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.1" />
